--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 <p>Automatický kotel FD25 + bojler 125 l</p>
 
 <div class="grid">
-  <div class="card"><div>Kotel – spaliny</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Kotel  </div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
   <div class="card"><div>Výstup z kotle</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Zpátečka kotle</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Teplota TUV</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Venkovní teplota</div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Zpátečka kotle</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Teplota TUV</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
+  <div class="card"><div>Venkovní teplota</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
 </div>
 
 <div class="card" style="margin-top:30px;">
