--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Attack FD25 – Přehled teplot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,45 +14,120 @@
       margin: 0;
       padding: 20px;
     }
+
     h1 {
       font-size: 1.8rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-top: 0;
+      opacity: 0.8;
+    }
+
+    button {
+      font-size: 1.2rem;
+      padding: 10px 20px;
+      border-radius: 12px;
+      border: none;
+      background: #2563eb;
+      color: white;
+      cursor: pointer;
       margin-bottom: 20px;
     }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 20px;
     }
+
     .card {
       background: #020617;
       border-radius: 16px;
       padding: 16px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+      text-align: center;
     }
+
     .value {
       font-size: 2.2rem;
       font-weight: bold;
     }
+
     .unit {
       font-size: 1rem;
       opacity: 0.7;
     }
+
     canvas {
       margin-top: 10px;
     }
+
+    /* ====== DISPLEJOVÝ REŽIM ====== */
+    .display-mode body {
+      padding: 10px;
+    }
+
+    .display-mode h1 {
+      font-size: 3rem;
+    }
+
+    .display-mode .value {
+      font-size: 4.5rem;
+    }
+
+    .display-mode .unit {
+      font-size: 1.5rem;
+    }
+
+    .display-mode .grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .display-mode canvas {
+      height: 420px !important;
+    }
   </style>
 </head>
+
 <body>
 
 <h1>🔥 Attack FD25 – Rodinný dům</h1>
 <p>Automatický kotel FD25 + bojler 125 l</p>
 
+<button onclick="toggleDisplay()">📺 Režim velkého displeje</button>
+
 <div class="grid">
-  <div class="card"><div>Kotel  </div><div class="value" id="f5">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Výstup z kotle</div><div class="value" id="f2">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Zpátečka kotle</div><div class="value" id="f1">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Teplota TUV</div><div class="value" id="f3">–</div><div class="unit">°C</div></div>
-  <div class="card"><div>Venkovní teplota</div><div class="value" id="f4">–</div><div class="unit">°C</div></div>
+  <div class="card">
+    <div>Kotel</div>
+    <div class="value" id="f5">–</div>
+    <div class="unit">°C</div>
+  </div>
+
+  <div class="card">
+    <div>Výstup z kotle</div>
+    <div class="value" id="f2">–</div>
+    <div class="unit">°C</div>
+  </div>
+
+  <div class="card">
+    <div>Zpátečka kotle</div>
+    <div class="value" id="f1">–</div>
+    <div class="unit">°C</div>
+  </div>
+
+  <div class="card">
+    <div>Teplota TUV</div>
+    <div class="value" id="f3">–</div>
+    <div class="unit">°C</div>
+  </div>
+
+  <div class="card">
+    <div>Venkovní teplota</div>
+    <div class="value" id="f4">–</div>
+    <div class="unit">°C</div>
+  </div>
 </div>
 
 <div class="card" style="margin-top:30px;">
@@ -61,7 +137,9 @@
 
 <script>
 const CHANNEL_ID = 231269;
-const RESULTS = 96; // cca 24h (15 min interval)
+const RESULTS = 96; // cca 24 hodin
+
+let chart;
 
 async function loadData() {
   const url = `https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS}`;
@@ -70,32 +148,44 @@ async function loadData() {
   const feeds = data.feeds;
 
   const last = feeds[feeds.length - 1];
+
   for (let i = 1; i <= 5; i++) {
-    document.getElementById(`f${i}`).textContent = last[`field${i}`] ?? '–';
+    document.getElementById(`f${i}`).textContent =
+      last[`field${i}`] !== null ? last[`field${i}`] : '–';
   }
 
-  const labels = feeds.map(f => new Date(f.created_at).toLocaleTimeString('cs-CZ', {hour: '2-digit', minute:'2-digit'}));
+  const labels = feeds.map(f =>
+    new Date(f.created_at).toLocaleTimeString('cs-CZ', {
+      hour: '2-digit',
+      minute: '2-digit'
+    })
+  );
 
   const datasets = [
-  {label: 'Kotel', field: 'field5'},
-  {label: 'Výstup z kotle', field: 'field2'},
-  {label: 'Zpátečka kotle', field: 'field1'},
-  {label: 'TUV', field: 'field3'},
-  {label: 'Venkovní teplota', field: 'field4'}
-].map(cfg => ({
-  label: cfg.label,
-  data: feeds.map(f => f[cfg.field]),
-  borderWidth: 2,
-  tension: 0.3
-}));
+    { label: 'Kotel', field: 'field5' },
+    { label: 'Výstup z kotle', field: 'field2' },
+    { label: 'Zpátečka kotle', field: 'field1' },
+    { label: 'TUV', field: 'field3' },
+    { label: 'Venkovní teplota', field: 'field4' }
+  ].map(cfg => ({
+    label: cfg.label,
+    data: feeds.map(f => f[cfg.field]),
+    borderWidth: 2,
+    tension: 0.3
+  }));
 
+  if (chart) chart.destroy();
 
-  new Chart(document.getElementById('chart'), {
+  chart = new Chart(document.getElementById('chart'), {
     type: 'line',
     data: { labels, datasets },
     options: {
       responsive: true,
-      plugins: { legend: { labels: { color: '#e5e7eb' } } },
+      plugins: {
+        legend: {
+          labels: { color: '#e5e7eb' }
+        }
+      },
       scales: {
         x: { ticks: { color: '#94a3b8' } },
         y: { ticks: { color: '#94a3b8' } }
@@ -104,10 +194,19 @@ async function loadData() {
   });
 }
 
+function toggleDisplay() {
+  document.documentElement.classList.toggle('display-mode');
+
+  if (!document.fullscreenElement) {
+    document.documentElement.requestFullscreen();
+  } else {
+    document.exitFullscreen();
+  }
+}
+
 loadData();
 setInterval(loadData, 60000);
 </script>
 
 </body>
 </html>
-
