--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-<meta charset="UTF-8" />
-<title>Attack FD25 – Profi panel vytápění</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8">
+<title>Attack FD25 – Dispečerský panel</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 body {
+  margin: 0;
+  padding: 20px;
   font-family: Arial, sans-serif;
   background: #020617;
   color: #e5e7eb;
-  margin: 0;
-  padding: 20px;
 }
 
 header {
@@ -22,28 +22,28 @@ header {
   margin-bottom: 20px;
 }
 
-h1 {
-  font-size: 2rem;
-  margin: 0;
-}
+h1 { margin: 0; font-size: 2rem; }
+.update { opacity: 0.8; }
 
-.update {
-  font-size: 1rem;
-  opacity: 0.8;
+.section-title {
+  margin: 30px 0 10px;
+  font-size: 1.2rem;
+  opacity: 0.9;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 18px;
+  grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
+  gap: 16px;
 }
 
 .card {
-  background: linear-gradient(180deg,#020617,#020617cc);
-  border-radius: 16px;
-  padding: 16px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+  background: #020617;
+  border: 1px solid #1e293b;
+  border-radius: 14px;
+  padding: 14px;
   text-align: center;
+  box-shadow: inset 0 0 0 1px #020617;
 }
 
 .card h3 {
@@ -53,107 +53,57 @@ h1 {
 }
 
 .value {
-  font-size: 2.8rem;
+  font-size: 2.6rem;
   font-weight: bold;
 }
 
 .unit {
-  font-size: 1rem;
   opacity: 0.6;
 }
 
-.section {
-  margin-top: 30px;
-}
-
-canvas {
-  margin-top: 10px;
-}
+canvas { margin-top: 10px; }
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>🔥 Attack FD25 – Profi panel vytápění</h1>
+  <h1>🔥 Attack FD25 – Dispečerský panel</h1>
   <div class="update" id="updated">Aktualizace: –</div>
 </header>
 
-<!-- TEPLOTY -->
+<div class="section-title">Teploty systému</div>
 <div class="grid">
-  <div class="card">
-    <h3>Kotel</h3>
-    <div class="value" id="kotel">–</div>
-    <div class="unit">°C</div>
-  </div>
-
-  <div class="card">
-    <h3>Výstup z kotle</h3>
-    <div class="value" id="vystup">–</div>
-    <div class="unit">°C</div>
-  </div>
-
-  <div class="card">
-    <h3>Zpátečka</h3>
-    <div class="value" id="zpat">–</div>
-    <div class="unit">°C</div>
-  </div>
-
-  <div class="card">
-    <h3>ΔT (výstup − zpátečka)</h3>
-    <div class="value" id="delta">–</div>
-    <div class="unit">°C</div>
-  </div>
-
-  <div class="card">
-    <h3>TUV</h3>
-    <div class="value" id="tuv">–</div>
-    <div class="unit">°C</div>
-  </div>
-
-  <div class="card">
-    <h3>Venkovní teplota</h3>
-    <div class="value" id="venek">–</div>
-    <div class="unit">°C</div>
-  </div>
+  <div class="card"><h3>Kotel</h3><div class="value" id="kotel">–</div><div class="unit">°C</div></div>
+  <div class="card"><h3>Výstup</h3><div class="value" id="vystup">–</div><div class="unit">°C</div></div>
+  <div class="card"><h3>Zpátečka</h3><div class="value" id="zpat">–</div><div class="unit">°C</div></div>
+  <div class="card"><h3>ΔT</h3><div class="value" id="delta">–</div><div class="unit">°C</div></div>
+  <div class="card"><h3>TUV</h3><div class="value" id="tuv">–</div><div class="unit">°C</div></div>
+  <div class="card"><h3>Venkovní</h3><div class="value" id="venek">–</div><div class="unit">°C</div></div>
 </div>
 
-<!-- SPOTŘEBA -->
-<div class="section grid">
-  <div class="card">
-    <h3>Denní energie TUV</h3>
-    <div class="value" id="day_kwh">–</div>
-    <div class="unit">kWh</div>
-  </div>
-
-  <div class="card">
-    <h3>Denní uhlí (ekv.)</h3>
-    <div class="value" id="day_coal">–</div>
-    <div class="unit">kg</div>
-  </div>
-
-  <div class="card">
-    <h3>Energie TUV (24 h)</h3>
-    <div class="value" id="month_kwh">–</div>
-    <div class="unit">kWh</div>
-  </div>
-
-  <div class="card">
-    <h3>Uhlí (24 h)</h3>
-    <div class="value" id="month_coal">–</div>
-    <div class="unit">kg</div>
-  </div>
+<div class="section-title">Ohřev TUV – energie</div>
+<div class="grid">
+  <div class="card"><h3>Dnešní energie TUV</h3><div class="value" id="today_kwh">–</div><div class="unit">kWh</div></div>
+  <div class="card"><h3>Posledních 24 h</h3><div class="value" id="day24_kwh">–</div><div class="unit">kWh</div></div>
+  <div class="card"><h3>Tento měsíc</h3><div class="value" id="month_kwh">–</div><div class="unit">kWh</div></div>
 </div>
 
-<!-- GRAF -->
-<div class="section card">
-  <h3>📈 Teploty – posledních 24 hodin</h3>
+<div class="section-title">Ekvivalent uhlí (hnědé – Bílina)</div>
+<div class="grid">
+  <div class="card"><h3>Dnes</h3><div class="value" id="today_coal">–</div><div class="unit">kg</div></div>
+  <div class="card"><h3>24 h</h3><div class="value" id="day24_coal">–</div><div class="unit">kg</div></div>
+  <div class="card"><h3>Měsíc</h3><div class="value" id="month_coal">–</div><div class="unit">kg</div></div>
+</div>
+
+<div class="section-title">Graf – posledních 24 h</div>
+<div class="card">
   <canvas id="chart"></canvas>
 </div>
 
 <script>
 const CHANNEL_ID = 231269;
-const RESULTS = 96; // 24 h
+const RESULTS = 96;
 
 const BOJLER = 125;
 const CP = 4.186;
@@ -167,9 +117,7 @@ function energyFromDelta(dT) {
 }
 
 async function loadData() {
-  const res = await fetch(
-    `https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS}`
-  );
+  const res = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?results=${RESULTS}`);
   const data = await res.json();
   const feeds = data.feeds;
   const last = feeds[feeds.length - 1];
@@ -177,39 +125,52 @@ async function loadData() {
   document.getElementById("updated").textContent =
     "Aktualizace: " + new Date(last.created_at).toLocaleString("cs-CZ");
 
-  const vystup = Number(last.field2);
-  const zpat = Number(last.field1);
+  const vystup = +last.field2;
+  const zpat = +last.field1;
 
-  document.getElementById("kotel").textContent = Number(last.field5).toFixed(1);
+  document.getElementById("kotel").textContent = (+last.field5).toFixed(1);
   document.getElementById("vystup").textContent = vystup.toFixed(1);
   document.getElementById("zpat").textContent = zpat.toFixed(1);
   document.getElementById("delta").textContent = (vystup - zpat).toFixed(1);
-  document.getElementById("tuv").textContent = Number(last.field3).toFixed(1);
-  document.getElementById("venek").textContent = Number(last.field4).toFixed(1);
+  document.getElementById("tuv").textContent = (+last.field3).toFixed(1);
+  document.getElementById("venek").textContent = (+last.field4).toFixed(1);
 
-  let energy = 0;
+  let today = 0, day24 = 0, month = 0;
+  const now = new Date(last.created_at);
+  const midnight = new Date(now); midnight.setHours(0,0,0,0);
+  const monthStart = new Date(now.getFullYear(), now.getMonth(), 1);
+
   for (let i = 1; i < feeds.length; i++) {
-    const dT = feeds[i].field3 - feeds[i - 1].field3;
-    if (dT > 0) energy += energyFromDelta(dT);
+    const tPrev = new Date(feeds[i-1].created_at);
+    const dT = feeds[i].field3 - feeds[i-1].field3;
+    if (dT <= 0) continue;
+
+    const e = energyFromDelta(dT);
+    day24 += e;
+    if (tPrev >= midnight) today += e;
+    if (tPrev >= monthStart) month += e;
   }
 
-  document.getElementById("day_kwh").textContent = energy.toFixed(1);
-  document.getElementById("day_coal").textContent = (energy / COAL_KWH).toFixed(1);
-  document.getElementById("month_kwh").textContent = energy.toFixed(1);
-  document.getElementById("month_coal").textContent = (energy / COAL_KWH).toFixed(1);
+  document.getElementById("today_kwh").textContent = today.toFixed(1);
+  document.getElementById("day24_kwh").textContent = day24.toFixed(1);
+  document.getElementById("month_kwh").textContent = month.toFixed(1);
+
+  document.getElementById("today_coal").textContent = (today/COAL_KWH).toFixed(1);
+  document.getElementById("day24_coal").textContent = (day24/COAL_KWH).toFixed(1);
+  document.getElementById("month_coal").textContent = (month/COAL_KWH).toFixed(1);
 
   const labels = feeds.map(f =>
-    new Date(f.created_at).toLocaleTimeString("cs-CZ", { hour: "2-digit", minute: "2-digit" })
+    new Date(f.created_at).toLocaleTimeString("cs-CZ",{hour:"2-digit",minute:"2-digit"})
   );
 
   const datasets = [
-    { label: "Výstup", field: "field2" },
-    { label: "Zpátečka", field: "field1" },
-    { label: "TUV", field: "field3" },
-    { label: "Venkovní", field: "field4" }
-  ].map(cfg => ({
-    label: cfg.label,
-    data: feeds.map(f => f[cfg.field]),
+    {label:"Výstup", field:"field2"},
+    {label:"Zpátečka", field:"field1"},
+    {label:"TUV", field:"field3"},
+    {label:"Venkovní", field:"field4"}
+  ].map(c => ({
+    label: c.label,
+    data: feeds.map(f => f[c.field]),
     borderWidth: 2,
     tension: 0.3
   }));
@@ -219,10 +180,10 @@ async function loadData() {
     type: "line",
     data: { labels, datasets },
     options: {
-      plugins: { legend: { labels: { color: "#e5e7eb" } } },
+      plugins: { legend: { labels: { color:"#e5e7eb" } } },
       scales: {
-        x: { ticks: { color: "#94a3b8" } },
-        y: { ticks: { color: "#94a3b8" } }
+        x: { ticks:{ color:"#94a3b8" } },
+        y: { ticks:{ color:"#94a3b8" } }
       }
     }
   });
